2001-01-27  Eli Zaretskii  <eliz@is.elta.co.il>

	* simple.el (transient-mark-mode): Doc fix.

2001-01-27  Gerd Moellmann  <gerd@gnu.org>

	* progmodes/etags.el (find-tag-noselect): Don't bind 
	tags-file-name.

2001-01-27  Eli Zaretskii  <eliz@is.elta.co.il>

	* shell.el (shell-unquote-argument): If the shell is one of the
	mentioned in shell-dumb-shell-regexp, don't treat a backslash as a
	quote character.
	(shell-dumb-shell-regexp): Document that the shells which match
	this regexp are supposed to not treat a backslash as a quote
	character.

	* emacs-lisp/lisp-mode.el (lisp-mode-shared-map): Undo the change
	from 2001-01-12.  It is not needed, since backspace is mapped into
	DEL.

2001-01-27  Richard M. Stallman  <rms@caffeine.ai.mit.edu>

	* dabbrev.el (dabbrev--substitute-expansion): 
	Treat a one-capital-letter abbrev as "not all upper case",
	so as to force preservation of the expansion's pattern
	if the expansion starts with a capital letter.

2001-01-27  Eli Zaretskii  <eliz@is.elta.co.il>

	* facemenu.el (facemenu-set-face, facemenu-set-face-from-menu):
	Doc fix.

	* simple.el (transient-mark-mode): Document the fact that many
	commands act on the region when mark is active.

2001-01-27  Kenichi Handa  <handa@etl.go.jp>

	* international/quail.el (quail-setup-completion-buf): Make the
	multibyteness of current buffer inherited to Quail completion
	buffer.
	(quail-show-guidance-buf): Make the multibyteness of current
	buffer inherited to Quail guidance buffer.
	(quail-help): Make the multibyteness of current buffer inherited
	to Quail help buffer.

2001-01-26  Dave Love  <fx@gnu.org>

	* time-stamp.el: Doc fixes.

	* progmodes/delphi.el (delphi-comment-face, delphi-string-face) 
	(delphi-keyword-face, delphi-other-face): Fix :type.

	* textmodes/flyspell.el: Doc fixes.  Add :version to new options.

	* mail/feedmail.el (feedmail): Add :link.
	(feedmail-send-it): Doc fix.

	* mail/sendmail.el: Doc fixes.